ensure header background is pullable when collapsing is disabled

--- a/src/sass/views/walletDetails.scss
+++ b/src/sass/views/walletDetails.scss
@@ -141,12 +141,22 @@
 
     .amount-bg {
       content: '';
-      bottom: 0;
+      top: 0;
       left: 0;
       position: absolute;
       width: 100%;
-      height: 200px;
-      transform: translateY(100px);
+      height: 500px;
+      transform: translateY(-499px);
+
+      &.collapsible {
+        top: initial;
+        bottom: 0;
+        left: 0;
+        position: absolute;
+        width: 100%;
+        height: 200px;
+        transform: translateY(100px);
+      }
     }
   }
   .amount {
